--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.4",
     "@heroicons/react": "^1.0.6",
+    "graphql": "^16.5.0",
     "next": "12.1.6",
     "next-auth": "^4.3.4",
     "react": "18.1.0",
