--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "12.1.6",
     "next-auth": "^4.3.4",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-hook-form": "^7.31.1"
   },
   "devDependencies": {
     "@types/node": "17.0.34",
